--- a/chaqueta.html
+++ b/chaqueta.html
@@ -141,9 +141,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pagina Principal</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Pagina Principal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
             </ul>
           </div>
 
