--- a/contacto.html
+++ b/contacto.html
@@ -93,28 +93,39 @@
 
 
     <section class="breadcrumbs">
-      <div class="container">
-        <h1>Contáctanos</h1><br><br>
-        <form>
-          <div class="form-group" class>
-            <label for="exampleInputEmail1">Nombre</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu nombre">
-            
+      <div class="contenedorcontacto">
+        <form action="" class="form">
+          <div class="form-header">
+           <h1 class="form-tittle">C<span>ontacto</span></h1>
           </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Correo Electronico</label>
-            <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Ingresa tu Correo">
-            
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Consulta</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingresa tu consulta"></textarea>
-          </div>
-         <br><br>
 
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+          <label for="nombre" class="form-label">Nombre:</label>
+         <input
+            type="text"
+            class="form-input"
+           id="nombre"
+            placeholder="Escriba su nombre"
+         />
 
+         <label for="correo electronico" class="form-label"
+           >Correo Electronico:</label
+         >
+         <input
+           type="text"
+           class="form-input"
+           id="direccion"
+           placeholder="Escriba su Correo"
+         />
+
+         <label for="mensaje" class="form-label">Mensaje</label>
+         <textarea
+           id="mensaje"
+           class="form-textarea"
+           placeholder="Escriba aquí su mensaje"
+         ></textarea>
+
+         <input type="submit" class="btn-submit" value="Enviar Consulta" />
+       </form>
       </div>
     </section>
   </main>
