--- a/Nosotros.html
+++ b/Nosotros.html
@@ -217,7 +217,7 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Página Principal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Página Principal</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
             </ul>
