--- a/compra.html
+++ b/compra.html
@@ -97,7 +97,7 @@
       <div class="row content">
         <div class="col-lg-6">
           <p>
-            Proveemos el servicio mas completo para comprar en sitios japoneses
+            Proveemos el servicio más completo para comprar en sitios japoneses
           </p>
           <ul>
             <li><i class="ri-shopping-bag-fill"></i> Añadir artículos al Carrito</li>
