--- a/figura.html
+++ b/figura.html
@@ -134,9 +134,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pagina Principal</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Página Principal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="compra.html">Como comprar?</a></li>
             </ul>
           </div>
 
