--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
 
         <nav class="nav-menu d-none d-lg-block">
           <ul>
-            <li class="active"><a href="home.html">Pagina Principal</a></li>
+            <li class="active"><a href="home.html">Página Principal</a></li>
             <li><a href="Nosotros.html">Nosotros</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li class="drop-down">
@@ -74,17 +74,17 @@
                 <li><a href="#">Celulares</a></li>
                 <li><a href="ramen.html">Comestibles</a></li>
                 <li><a href="chaqueta.html">Moda</a></li>
-                <li><a href="#">Linea Blanca</a></li>
+                <li><a href="#">Línea Blanca</a></li>
               </ul>
             </li>
             <li><a href="compra.html">Como Comprar</a></li>
             
-            <li><a href="iniciarSesion.html">Iniciar Sesion</a></li>
+            <li><a href="iniciarSesion.html">Iniciar Sesión</a></li>
           </ul>
         </nav>
         <!-- .nav-menu -->
 
-        <a href="Registro.html" class="get-started-btn scrollto">Registrate</a>
+        <a href="Registro.html" class="get-started-btn scrollto">Regístrate</a>
       </div>
     </header>
     <!-- End Header -->
@@ -117,10 +117,10 @@
           >
             <div class="icon-box">
               <div class="icon"><i class="ri-game-line"></i></div>
-              <h4 class="title"><a href="play.html">VideoJuegos</a></h4>
+              <h4 class="title"><a href="play.html">Videojuegos</a></h4>
               <p class="description">
                 Todo mundo gamer,
-                Tus VideoJuegos favoritos los puedes comprar acá!!
+                Tus Videojuegos favoritos los puedes comprar acá!!
               </p>
             </div>
           </div>
