--- a/chaqueta.html
+++ b/chaqueta.html
@@ -43,7 +43,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="home.html">Pagina Principal</a></li>
+          <li class="active"><a href="home.html">Página Principal</a></li>
           <li><a href="Nosotros.html">Nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li class="drop-down">
@@ -67,12 +67,12 @@
           </li>
           <li><a href="compra.html">Como Comprar</a></li>
           
-          <li><a href="iniciarSesion.html">Iniciar Sesion</a></li>
+          <li><a href="iniciarSesion.html">Iniciar Sesión</a></li>
         </ul>
       </nav>
       <!-- .nav-menu -->
 
-      <a href="Registro.html" class="get-started-btn scrollto">Registrate</a>
+      <a href="Registro.html" class="get-started-btn scrollto">Regístrate</a>
     </div>
   </header>
 
@@ -134,16 +134,17 @@
               Santiago Centro; Marín #0279<br>
               Chile <br><br>
               <strong>Fono:</strong> (2) 2354 0800<br>
-              <strong>Email:</strong> products.nipon @JapanMarket.cl<br>
+              <strong>Email:</strong> products.nipon@JapanMarket.cl<br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Pagina Principal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Página Principal</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="compra.html">Como comprar?</a></li>
             </ul>
           </div>
 
