--- a/play.html
+++ b/play.html
@@ -44,7 +44,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="home.html">Pagina Principal</a></li>
+          <li class="active"><a href="home.html">Página Principal</a></li>
           <li><a href="Nosotros.html">Nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li class="drop-down">
@@ -63,17 +63,17 @@
               </li>
               <li><a href="#">Celulares</a></li>
               <li><a href="#">Moda</a></li>
-              <li><a href="#">Linea Blanca</a></li>
+              <li><a href="#">Línea Blanca</a></li>
             </ul>
           </li>
           <li><a href="compra.html">Como Comprar</a></li>
           
-          <li><a href="iniciarSesion.html">Iniciar Sesion</a></li>
+          <li><a href="iniciarSesion.html">Iniciar Sesión</a></li>
         </ul>
       </nav>
       <!-- .nav-menu -->
 
-      <a href="Registro.html" class="get-started-btn scrollto">Registrate</a>
+      <a href="Registro.html" class="get-started-btn scrollto">Regístrate</a>
     </div>
   </header>
 
@@ -134,9 +134,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Enlaces útiles</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pagina Principal</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Página Principal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="compra.html">Como comprar?</a></li>
             </ul>
           </div>
 
