--- a/Nosotros.html
+++ b/Nosotros.html
@@ -220,6 +220,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="home.html">Página Principal</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="Nosotros.html">Nosotros</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contacto.html">Contacto</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="compra.html">Como comprar?</a></li>
             </ul>
           </div>
 
