--- a/Registro.html
+++ b/Registro.html
@@ -39,7 +39,7 @@
                 </li>
                 <li><a href="#">Celulares</a></li>
                 <li><a href="chaqueta.html">Moda</a></li>
-                <li><a href="#">Linea Blanca</a></li>
+                <li><a href="#">Línea Blanca</a></li>
               </ul>
             </li>
             <li><a href="compra.html">Como Comprar</a></li>
